--- a/src/styles/setup/_scrollbar.scss
+++ b/src/styles/setup/_scrollbar.scss
@@ -1,21 +1,33 @@
 .scrollbar-style::-webkit-scrollbar {
-  height: 4px;
-  width: 4px;
-}
-.scrollbar-style:hover::-webkit-scrollbar {
-  height: 6px;
-  width: 6px;
-}
-.scrollbar-style::-webkit-scrollbar-track {
-  @apply bg-gray-400;
-  @apply dark:bg-gray-400;
+  width: 7px;
+  height: 7px;
+  transition: all 1s ease-in;
 }
 .scrollbar-style::-webkit-scrollbar-thumb {
-  @apply bg-blue-500;
-  @apply dark:bg-blue-700;
+  background: transparent;
+  border: 2px solid transparent;
+  background-clip: padding-box;
   border-radius: 20px;
+  transition: all 1s ease-in;
+}
+.scrollbar-style::-webkit-scrollbar-thumb:hover{
+  border: 0;
+  transition: all 1s ease-in;
+}
+.scrollbar-style::-webkit-scrollbar-track {
+  background: transparent;
+}
+.scrollbar-style::-webkit-scrollbar-track {
+  background-color: transparent;
+  transition: all 1s ease-in;
+}
+.scrollbar-style::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: transparent;
+  transition: all 1s ease-in;
 }
 .scrollbar-style:hover::-webkit-scrollbar-thumb {
-  @apply bg-blue-500/75;
-  @apply dark:bg-blue-700/75;
+  @apply bg-gray-400;
+  @apply dark:bg-gray-700;
+  transition: all 1s ease-in;
 }
